# moonlight-installer

./: .gitignore  AppImageBuilder.yml  Cargo.toml  README.md  build-linux.sh  build.rs  index.html  metainfo.xml  package-macos-app.sh  package.json  pnpm-lock.yaml
.github/workflows/: build.yml  tauri.yml
assets/: Info.plist  icon.icns  moonlight-installer.desktop
crates/libmoonlight/: Cargo.toml
crates/libmoonlight/src/: error.rs  injector.js  installer.rs  lib.rs  types.rs  util.rs
crates/moonlight-cli/: Cargo.toml  README.md
crates/moonlight-cli/src/: main.rs
crates/moonlight-installer/: Cargo.toml  build.rs
crates/moonlight-installer/src/: app.rs  config.rs  logic.rs  main.rs
src/: App.tsx  Patchers.tsx  Updater.tsx  app.rs  config.rs  logic.rs  main.rs  main.tsx  styles.css  types.ts  util.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  types.rs  version.rs
src-tauri/src/commands/: mod.rs  patch.rs  update.rs
src/components/: ErrorBox.tsx  Patchers.tsx  Updater.tsx
src/css/: styles.css
src/installer/: installer.rs  mod.rs  types.rs  util.rs
