[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
authors = ["moonlight contributors"]
edition = "2021"
homepage = "https://moonlight-mod.github.io/"
repository = "https://github.com/moonlight-mod/moonlight-installer"
license = "MIT"
version = "0.2.5"

[workspace.dependencies]
libmoonlight = { path = "./crates/libmoonlight" }
reqwest = { version = "0.12.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
eframe = { version = "0.30.0", features = ["accesskit", "default_fonts", "persistence"] }
eyre = "0.6.12"
flate2 = "1.0.35"
egui = "0.30.0"
flume = "0.11.1"
tar = "0.4.43"
serde_json = "1.0.135"
thiserror = "2.0.9"
color-eyre = { version = "0.6.3", default-features = false }
clap = { version = "4.5.24", features = ["derive", "cargo"] }
clap_complete = "4.5.41"
serde = { version = "1.0.217", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.6"
nix = { version = "0.29.0", features = ["user"] }
serde_ini = "0.2.0"
serde-value = "0.7.0"
