[package]
name = "moonlight-installer"
version = "0.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
flate2 = "1.0.28"
tar = "0.4.40"

[features]
custom-protocol = ["tauri/custom-protocol"]
