[package]
name = "libmoonlight"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
fancy-regex = { workspace = true }
flate2 = { workspace = true }
reqwest = { workspace = true }
tar = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
nix = { workspace = true }
serde_ini = { workspace = true }
serde-value = { workspace = true }
