[package]
name = "moonlight-cli"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
eyre = { workspace = true }
color-eyre = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
libmoonlight = { workspace = true }
clap_complete = { workspace = true  }
