[package]
name = "moonlight-installer"
license = "MIT"
version = "0.2.0"
edition = "2021"

[dependencies]
eframe = { version = "0.29.1", features = [
  "accesskit",
  "default_fonts",
  "persistence",
] }
egui = "0.29.1"
flume = "0.11.0"
serde = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
libmoonlight = { path = "../libmoonlight" }

[package.metadata.bundle]
name = "moonlight installer"
identifier = "io.github.moonlight-mod.moonlight-installer"
icon = ["../assets/icon.png"]

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.17"
