[package]
name = "moonlight-installer"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
eframe = { workspace = true }
egui = { workspace = true }
flume = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
libmoonlight = { workspace = true }

[package.metadata.bundle]
name = "moonlight installer"
identifier = "io.github.moonlight-mod.moonlight-installer"
icon = ["../../assets/icon.png"]

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.17"
